<resources>
    <string name="app_name">Ikanku</string>

    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>
    <string name="submit">Jual Ikan</string>
    <string name="data_kosong">Data ikan kosong!</string>
    <string name="google_maps_key">AIzaSyAbaKzT1tabRP0FHrh8Bz5CA-08KAwCqhw</string>

    <string-array name="date">
        <item>28 September 2018</item>
        <item>29 September 2018</item>
        <item>30 September 2018</item>
        <item>1 Desember 2018</item>
        <item>2 Desember 2018</item>
    </string-array>

    <string name="hello">
<![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;color:gray;background-color:black;">
  Lorem ipsum dolor sit amet, consectetur
  adipiscing elit. Nunc pellentesque, urna
  nec hendrerit pellentesque, risus massa
 </body>
</html>
]]>
</string>

</resources>
